--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack --mode production",
-    "start": "npx webpack --mode development"
+    "start": "webpack-dev-server --open --mode development",
+    "watch": "webpack --watch --mode development"
   },
   "author": "",
   "license": "ISC",
@@ -16,7 +17,8 @@
     "ts-loader": "^6.1.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.8"
+    "webpack-cli": "^3.3.8",
+    "webpack-dev-server": "^3.8.1"
   },
   "dependencies": {
     "react": "^16.9.0",
