--- a/package.json
+++ b/package.json
@@ -11,9 +11,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "css-loader": "^3.2.0",
+    "css-modules-typescript-loader": "^3.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
+    "style-loader": "^1.0.0",
     "ts-loader": "^6.1.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
