--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
     "ts-loader": "^6.1.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.6.3",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
@@ -28,7 +29,12 @@
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "react": "^16.9.0",
     "react-dom": "^16.9.0"
+  },
+  "_moduleAliases": {
+    "components": "./src/components"
   }
 }
