--- a/package.json
+++ b/package.json
@@ -6,17 +6,21 @@
   "scripts": {
     "build": "webpack --mode production --env=production",
     "start": "webpack-dev-server --open --mode development --env=development",
-    "watch": "webpack --watch --mode development"
+    "watch": "webpack --watch --mode development",
+    "prettier": "prettier '**/*.{ts, tsx}' --write"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@storybook/addon-info": "^5.2.1",
     "@types/node-sass": "^4.11.0",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/storybook__react": "^4.0.2",
     "css-loader": "^3.2.0",
     "css-modules-typescript-loader": "^3.0.0",
     "node-sass": "^4.12.0",
+    "react-docgen-typescript-loader": "^3.2.1",
     "sass-loader": "^8.0.0",
     "source-map-loader": "^0.2.4",
     "style-loader": "^1.0.0",
@@ -26,7 +30,14 @@
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.1",
-    "webpack-merge": "^4.2.2"
+    "webpack-merge": "^4.2.2",
+    "@typescript-eslint/eslint-plugin": "^2.3.1",
+    "@typescript-eslint/parser": "^2.3.1",
+    "eslint": "^6.4.0",
+    "eslint-config-prettier": "^6.3.0",
+    "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-react": "^7.14.3",
+    "prettier": "^1.18.2"
   },
   "dependencies": {
     "lodash": "^4.17.15",
